# tempus-laucher

./: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  download.rs  main.rs  network.rs  runcommand.tsx
src/app/: layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/[serverName]/modding/: page.tsx
src/app/(dashboard)/servers/: page.tsx
src/app/(dashboard)/settings/: page.tsx
src/auth/: redirect.ts
src/components/header/: header.tsx  user.tsx
src/components/header/user/: change-username.tsx
src/components/icons/: coin.tsx  logo.tsx  play.tsx
src/components/provider/: RecoilProvider.tsx
src/components/servers/card/: card-action.tsx
src/components/servers/card/mods/: table.tsx
src/components/servers/server-status/: server-status.tsx
src/components/settings/: game-tabs.tsx
src/components/settings/card/: java-settings.tsx
src/components/sidebar/: menulink.tsx
src/components/ui/: sheet.tsx  table.tsx
src/components/ui/banner/: banner.tsx
src/components/ui/header/: user.tsx
src/components/ui/servers/card/: card-describe.tsx  card-settings.tsx  card.tsx
src/components/ui/servers/server-status/: server-status.tsx
src/components/ui/sidebar/: active-selector.tsx  sidebar.tsx
src/config/: launcher.ts
src/lib/: config.ts  data.ts  types.tsx  update.ts  user.ts  utils.ts
src/lib/game/: download.ts  start.ts
src/store/: store.ts
src/styles/: globals.css
~/.tauri/: myapp.key  myapp.key.pub
(+1 files in other folders)
