[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["primalcat"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "api-all", "updater"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] } # for our async runtime
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
ring = "0.17.7"
hex = "0.4.3"
once_cell = "1.13.0"
fs_extra = "1.3.0"
backtrace = "0.3.69"
chrono = "0.4.33"
dir-diff = "0.3.3"
directories = "5.0.1"
fern = { version = "0.6.1", features = ["date-based", "colored"] }
flate2 = "1.0.28"
futures-util = "0.3.30"
glob = "0.3.1"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
rev_buf_reader = "0.3.0"
semver = "1.0.21"
sysinfo = "0.30.5"
tar = "0.4.40"
thiserror = "1.0.56"
walkdir = "2.4.0"
wgpu = "0.18.0"
zip = { version = "0.6.2" }
zip-extract = "0.1.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
